--- a/app/src/main/res/layout/activity_bus_time_table.xml
+++ b/app/src/main/res/layout/activity_bus_time_table.xml
@@ -5,9 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BusTimeTable">
-    <com.github.chrisbanes.photoview.PhotoView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@mipmap/bustimetable" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.github.chrisbanes.photoview.PhotoView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:src="@mipmap/bustimetable"/>
+    </ScrollView>
+
 
 </android.support.constraint.ConstraintLayout>
