--- a/app/src/main/res/layout/bus_track_item_card.xml
+++ b/app/src/main/res/layout/bus_track_item_card.xml
@@ -5,86 +5,92 @@
     android:id="@+id/cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#87ceeb"
     app:cardCornerRadius="10dp"
+    android:layout_margin="10dp"
     app:cardElevation="20dp">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="130dp"
-        android:layout_marginTop="2dp"
-        android:background="@color/Grey"
-        android:fadingEdge="vertical"
-        android:padding="10dp">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:paddingTop="10dp">
 
         <TextView
             android:id="@+id/bus_id"
-            android:layout_width="35dp"
-            android:layout_height="46dp"
-            android:layout_alignParentTop="true"
+            android:layout_width="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            app:layout_goneMarginTop="10dp"
             android:text="1"
-            android:layout_marginTop="15sp"
+            android:layout_marginTop="12dp"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/bus_id"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15sp"
-            android:layout_toRightOf="@+id/bus_id"
+            android:layout_marginStart="10dp"
+            app:layout_constraintBottom_toBottomOf="@id/bus_id"
+            app:layout_constraintTop_toTopOf="@id/bus_id"
+            app:layout_constraintLeft_toRightOf="@id/bus_id"
             android:text="Driver Name"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="18sp" />
 
         <TextView
+            app:layout_constraintTop_toBottomOf="@id/name"
+            app:layout_constraintLeft_toLeftOf="@id/name"
             android:id="@+id/mobile"
+            android:textSize="15sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="280dp"
-            android:layout_marginTop="10dp"
             android:text="Driver Number"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="italic" />
+            android:layout_marginTop="5dp"
+            android:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/bus_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="280dp"
-            android:layout_marginTop="30dp"
             android:text="Bus Number"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="italic" />
+            android:textSize="15sp"
+            app:layout_constraintTop_toBottomOf="@id/mobile"
+            app:layout_constraintLeft_toLeftOf="@id/mobile"
+            android:layout_marginTop="3dp"
+            android:textColor="@color/colorPrimary" />
 
+
+        <View
+            app:layout_constraintTop_toBottomOf="@id/bus_no"
+            android:layout_marginTop="10dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@android:color/holo_orange_light" />
 
         <Button
             android:id="@+id/track"
-            android:layout_width="146dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="133dp"
-            android:layout_marginLeft="133dp"
-            android:layout_marginEnd="122dp"
-            android:layout_marginRight="122dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/darkyellow"
+            android:paddingRight="1dp"
+            android:paddingLeft="1dp"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:background="#e2af4b"
             android:text="Track"
             android:textAllCaps="false"
-            android:textColor="#ffffff"
+            android:textColor="@color/colorPrimary"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/mobile"
+            app:layout_constraintRight_toRightOf="parent" />
 
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
+
 
 </android.support.v7.widget.CardView>
