--- a/app/src/main/res/layout/fragment_bus_track.xml
+++ b/app/src/main/res/layout/fragment_bus_track.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:padding="16dp"
+    android:background="#d0d0d0"
     >
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -11,6 +12,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:layout_height="match_parent"
+            android:background="#d0d0d0"
             android:layout_width="wrap_content"
             android:id="@+id/rv"
             >
