--- a/app/src/main/res/layout/notification_item_card.xml
+++ b/app/src/main/res/layout/notification_item_card.xml
@@ -8,7 +8,7 @@
     app:cardCornerRadius="10dp"
     app:cardElevation="20dp">
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/blackishYellow"
@@ -19,31 +19,32 @@
 
         <TextView
             android:id="@+id/notification_header"
-            android:layout_width="379dp"
+            android:layout_width="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
             android:text="HEADER"
             android:textColor="@color/colorPrimary"
-            android:textSize="18dp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:fontFamily="@font/pontano_sans" />
 
         <TextView
             android:id="@+id/notification_body"
-            android:layout_width="391dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/notification_header"
-            android:layout_alignStart="@+id/notification_header"
-            android:layout_alignLeft="@+id/notification_header"
-            android:layout_marginStart="1dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginTop="2dp"
+            app:layout_constraintTop_toBottomOf="@+id/notification_header"
+            app:layout_constraintLeft_toLeftOf="@id/notification_header"
+            app:layout_constraintRight_toRightOf="@+id/notification_header"
+            android:layout_marginStart="5dp"
             android:text="Body of the notification"
             android:textColor="@color/LimeYellow"
-            android:textSize="17sp"
+            android:textSize="14sp"
             app:fontFamily="sans-serif-condensed" />
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
